tests/golden/type_errors/index_compound_non_array.err
Type error at 2:2: can only assign array elements, map entries, or range elements
  x[0] += 1;
   ^
